# MongoCORE

./: CMakeLists.txt  CMakeLists.txt.user.903b27a  CMakeLists.txt.user.b9f2877  db.cpp  db.h  item.cpp  item.h  listitem.h  mongocore.cpp  mongocore.h
example/CPP17File_system/: CMakeLists.txt  main.cpp
